y.output
Terminals unused in grammar

   SIZE
   DEREFERENCE
   PERCENT
   QUOTES
   DOUBLEQUOTES
   COLON


State 180 conflicts: 1 shift/reduce


Grammar

    0 $accept: s $end

    1 s: code

    2 code: functions Main
    3     | Main

    4 Main: FUNCTION VOID MAIN LEFTPAREN RIGHTPAREN void_block

    5 functions: functions function
    6          | function

    7 function: void_func
    8         | value_func

    9 void_func: FUNCTION VOID id LEFTPAREN args RIGHTPAREN void_block

   10 value_func: FUNCTION func_type id LEFTPAREN args RIGHTPAREN value_block

   11 void_block: LEFTBRACE RIGHTBRACE
   12           | LEFTBRACE declerations statments RIGHTBRACE
   13           | LEFTBRACE statments RIGHTBRACE
   14           | LEFTBRACE functions declerations statments RIGHTBRACE
   15           | LEFTBRACE functions statments RIGHTBRACE
   16           | LEFTBRACE functions RIGHTBRACE
   17           | LEFTBRACE declerations RIGHTBRACE

   18 value_block: LEFTBRACE RETURN expression SEMICOLON RIGHTBRACE
   19            | LEFTBRACE statments RETURN expression SEMICOLON RIGHTBRACE
   20            | LEFTBRACE functions statments RETURN expression SEMICOLON RIGHTBRACE
   21            | LEFTBRACE declerations statments RETURN expression SEMICOLON RIGHTBRACE
   22            | LEFTBRACE functions declerations statments RETURN expression SEMICOLON RIGHTBRACE
   23            | LEFTBRACE functions RETURN expression SEMICOLON RIGHTBRACE
   24            | LEFTBRACE declerations RETURN expression SEMICOLON RIGHTBRACE

   25 statments: statments statment
   26          | statment

   27 statment: stat_assignment SEMICOLON
   28         | string_assignment SEMICOLON
   29         | if_statment
   30         | if_else_statment
   31         | loop_statment
   32         | block
   33         | func_call SEMICOLON
   34         | RETURN expression SEMICOLON
   35         | RETURN SEMICOLON

   36 if_statment: IF LEFTPAREN expression RIGHTPAREN statment

   37 if_else_statment: IF LEFTPAREN expression RIGHTPAREN statment ELSE statment

   38 loop_statment: for
   39              | while
   40              | do_while

   41 for: FOR LEFTPAREN stat_assignment SEMICOLON expression SEMICOLON stat_assignment RIGHTPAREN statment

   42 while: WHILE LEFTPAREN expression RIGHTPAREN statment

   43 do_while: DO block WHILE LEFTPAREN expression RIGHTPAREN SEMICOLON

   44 stat_assignment: id ASSIGNMENT expression

   45 string_assignment: id LEFTBRACKET expression RIGHTBRACKET ASSIGNMENT expression

   46 expression: expression PLUS expression
   47           | expression MINUS expression
   48           | expression MULTI expression
   49           | expression DIVISION expression
   50           | expression EQUAL expression
   51           | expression GREATER expression
   52           | expression GREATEREQUAL expression
   53           | expression LESS expression
   54           | expression LESSEQUAL expression
   55           | expression NOTEQUAL expression
   56           | expression AND expression
   57           | expression OR expression
   58           | NOT expression
   59           | LEFTPAREN expression RIGHTPAREN
   60           | ABSUOLUTE id ABSUOLUTE
   61           | ADDRESS id
   62           | ADDRESS string_id
   63           | int
   64           | hex
   65           | real
   66           | string_id
   67           | true
   68           | false
   69           | csnull
   70           | id
   71           | char
   72           | string
   73           | ptr

   74 func_call: id LEFTPAREN func_params RIGHTPAREN
   75          | id ASSIGNMENT id LEFTPAREN func_params RIGHTPAREN
   76          | id LEFTPAREN RIGHTPAREN
   77          | id ASSIGNMENT id LEFTPAREN RIGHTPAREN

   78 func_params: func_params func
   79            | func

   80 func: expression COMMA
   81     | expression

   82 block: LEFTBRACE RIGHTBRACE
   83      | LEFTBRACE statments RIGHTBRACE
   84      | LEFTBRACE declerations RIGHTBRACE
   85      | LEFTBRACE declerations statments RIGHTBRACE
   86      | LEFTBRACE RETURN expression SEMICOLON RIGHTBRACE
   87      | LEFTBRACE statments RETURN expression SEMICOLON RIGHTBRACE
   88      | LEFTBRACE declerations RETURN expression SEMICOLON RIGHTBRACE
   89      | LEFTBRACE declerations statments RETURN expression SEMICOLON RIGHTBRACE

   90 func_type: INT
   91          | REAL
   92          | CHAR
   93          | BOOL
   94          | INTPTR
   95          | CHARPTR
   96          | REALPTR

   97 var_type: INT
   98         | REAL
   99         | CHAR
  100         | BOOL
  101         | INTPTR
  102         | CHARPTR
  103         | REALPTR

  104 args: args_decleration
  105     | args_decleration SEMICOLON args
  106     | %empty

  107 declerations: declerations var_decleration
  108             | var_decleration
  109             | declerations string_decleration
  110             | string_decleration

  111 var_decleration: VAR params_decleration SEMICOLON

  112 string_decleration: STRING string_params SEMICOLON

  113 string_params: id LEFTBRACKET expression RIGHTBRACKET
  114              | id LEFTBRACKET expression RIGHTBRACKET COMMA string_params
  115              | id LEFTBRACKET expression RIGHTBRACKET ASSIGNMENT expression
  116              | id LEFTBRACKET expression RIGHTBRACKET ASSIGNMENT expression COMMA string_params

  117 args_decleration: var_type params

  118 params_decleration: var_type variables

  119 variables: id
  120          | id COMMA variables
  121          | id ASSIGNMENT expression
  122          | id ASSIGNMENT expression COMMA variables
  123          | id ASSIGNMENT func_call
  124          | id ASSIGNMENT func_call COMMA variables

  125 params: id COMMA params
  126       | id

  127 string_id: id LEFTBRACKET expression RIGHTBRACKET

  128 csnull: CSNULL

  129 string: STR

  130 char: CHARACTER

  131 int: INTEGER

  132 real: REAL_D

  133 hex: HEX

  134 true: BOOLTRUE

  135 false: BOOLFALSE

  136 id: ID

  137 ptr: MULTI ID


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4 9 10
VOID (259) 4 9
RETURN (260) 18 19 20 21 22 23 24 34 35 86 87 88 89
MAIN (261) 4
INT (262) 90 97
REAL (263) 91 98
ID (264) 136 137
INTEGER (265) 131
CHAR (266) 92 99
BOOL (267) 93 100
INTPTR (268) 94 101
CHARPTR (269) 95 102
REALPTR (270) 96 103
STRING (271) 112
BOOLTRUE (272) 134
BOOLFALSE (273) 135
CSNULL (274) 128
REAL_D (275) 132
CHARACTER (276) 130
HEX (277) 133
STR (278) 129
VAR (279) 111
SIZE (280)
IF (281) 36 37
ELSE (282) 37
WHILE (283) 42 43
FOR (284) 41
DO (285) 43
GREATER (286) 51
PLUS (287) 46
ASSIGNMENT (288) 44 45 75 77 115 116 121 122 123 124
COMMA (289) 80 114 116 120 122 124 125
DIVISION (290) 49
AND (291) 56
EQUAL (292) 50
GREATEREQUAL (293) 52
LESS (294) 53
LESSEQUAL (295) 54
MINUS (296) 47
NOT (297) 58
NOTEQUAL (298) 55
OR (299) 57
MULTI (300) 48 137
ADDRESS (301) 61 62
DEREFERENCE (302)
ABSUOLUTE (303) 60
SEMICOLON (304) 18 19 20 21 22 23 24 27 28 33 34 35 41 43 86 87 88
    89 105 111 112
LEFTBRACE (305) 11 12 13 14 15 16 17 18 19 20 21 22 23 24 82 83 84
    85 86 87 88 89
RIGHTBRACE (306) 11 12 13 14 15 16 17 18 19 20 21 22 23 24 82 83 84
    85 86 87 88 89
LEFTPAREN (307) 4 9 10 36 37 41 42 43 59 74 75 76 77
RIGHTPAREN (308) 4 9 10 36 37 41 42 43 59 74 75 76 77
LEFTBRACKET (309) 45 113 114 115 116 127
RIGHTBRACKET (310) 45 113 114 115 116 127
PERCENT (311)
QUOTES (312)
DOUBLEQUOTES (313)
COLON (314)
XIF (315)
PTRE (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
s (63)
    on left: 1, on right: 0
code (64)
    on left: 2 3, on right: 1
Main (65)
    on left: 4, on right: 2 3
functions (66)
    on left: 5 6, on right: 2 5 14 15 16 20 22 23
function (67)
    on left: 7 8, on right: 5 6
void_func (68)
    on left: 9, on right: 7
value_func (69)
    on left: 10, on right: 8
void_block (70)
    on left: 11 12 13 14 15 16 17, on right: 4 9
value_block (71)
    on left: 18 19 20 21 22 23 24, on right: 10
statments (72)
    on left: 25 26, on right: 12 13 14 15 19 20 21 22 25 83 85 87 89
statment (73)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 26 36 37 41 42
if_statment (74)
    on left: 36, on right: 29
if_else_statment (75)
    on left: 37, on right: 30
loop_statment (76)
    on left: 38 39 40, on right: 31
for (77)
    on left: 41, on right: 38
while (78)
    on left: 42, on right: 39
do_while (79)
    on left: 43, on right: 40
stat_assignment (80)
    on left: 44, on right: 27 41
string_assignment (81)
    on left: 45, on right: 28
expression (82)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 68 69 70 71 72 73, on right: 18 19 20 21 22 23 24 34
    36 37 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    80 81 86 87 88 89 113 114 115 116 121 122 127
func_call (83)
    on left: 74 75 76 77, on right: 33 123 124
func_params (84)
    on left: 78 79, on right: 74 75 78
func (85)
    on left: 80 81, on right: 78 79
block (86)
    on left: 82 83 84 85 86 87 88 89, on right: 32 43
func_type (87)
    on left: 90 91 92 93 94 95 96, on right: 10
var_type (88)
    on left: 97 98 99 100 101 102 103, on right: 117 118
args (89)
    on left: 104 105 106, on right: 9 10 105
declerations (90)
    on left: 107 108 109 110, on right: 12 14 17 21 22 24 84 85 88
    89 107 109
var_decleration (91)
    on left: 111, on right: 107 108
string_decleration (92)
    on left: 112, on right: 109 110
string_params (93)
    on left: 113 114 115 116, on right: 112 114 116
args_decleration (94)
    on left: 117, on right: 104 105
params_decleration (95)
    on left: 118, on right: 111
variables (96)
    on left: 119 120 121 122 123 124, on right: 118 120 122 124
params (97)
    on left: 125 126, on right: 117 125
string_id (98)
    on left: 127, on right: 62 66
csnull (99)
    on left: 128, on right: 69
string (100)
    on left: 129, on right: 72
char (101)
    on left: 130, on right: 71
int (102)
    on left: 131, on right: 63
real (103)
    on left: 132, on right: 65
hex (104)
    on left: 133, on right: 64
true (105)
    on left: 134, on right: 67
false (106)
    on left: 135, on right: 68
id (107)
    on left: 136, on right: 9 10 44 45 60 61 70 74 75 76 77 113 114
    115 116 119 120 121 122 123 124 125 126 127
ptr (108)
    on left: 137, on right: 73


State 0

    0 $accept: . s $end

    FUNCTION  shift, and go to state 1

    s           go to state 2
    code        go to state 3
    Main        go to state 4
    functions   go to state 5
    function    go to state 6
    void_func   go to state 7
    value_func  go to state 8


State 1

    4 Main: FUNCTION . VOID MAIN LEFTPAREN RIGHTPAREN void_block
    9 void_func: FUNCTION . VOID id LEFTPAREN args RIGHTPAREN void_block
   10 value_func: FUNCTION . func_type id LEFTPAREN args RIGHTPAREN value_block

    VOID     shift, and go to state 9
    INT      shift, and go to state 10
    REAL     shift, and go to state 11
    CHAR     shift, and go to state 12
    BOOL     shift, and go to state 13
    INTPTR   shift, and go to state 14
    CHARPTR  shift, and go to state 15
    REALPTR  shift, and go to state 16

    func_type  go to state 17


State 2

    0 $accept: s . $end

    $end  shift, and go to state 18


State 3

    1 s: code .

    $default  reduce using rule 1 (s)


State 4

    3 code: Main .

    $default  reduce using rule 3 (code)


State 5

    2 code: functions . Main
    5 functions: functions . function

    FUNCTION  shift, and go to state 1

    Main        go to state 19
    function    go to state 20
    void_func   go to state 7
    value_func  go to state 8


State 6

    6 functions: function .

    $default  reduce using rule 6 (functions)


State 7

    7 function: void_func .

    $default  reduce using rule 7 (function)


State 8

    8 function: value_func .

    $default  reduce using rule 8 (function)


State 9

    4 Main: FUNCTION VOID . MAIN LEFTPAREN RIGHTPAREN void_block
    9 void_func: FUNCTION VOID . id LEFTPAREN args RIGHTPAREN void_block

    MAIN  shift, and go to state 21
    ID    shift, and go to state 22

    id  go to state 23


State 10

   90 func_type: INT .

    $default  reduce using rule 90 (func_type)


State 11

   91 func_type: REAL .

    $default  reduce using rule 91 (func_type)


State 12

   92 func_type: CHAR .

    $default  reduce using rule 92 (func_type)


State 13

   93 func_type: BOOL .

    $default  reduce using rule 93 (func_type)


State 14

   94 func_type: INTPTR .

    $default  reduce using rule 94 (func_type)


State 15

   95 func_type: CHARPTR .

    $default  reduce using rule 95 (func_type)


State 16

   96 func_type: REALPTR .

    $default  reduce using rule 96 (func_type)


State 17

   10 value_func: FUNCTION func_type . id LEFTPAREN args RIGHTPAREN value_block

    ID  shift, and go to state 22

    id  go to state 24


State 18

    0 $accept: s $end .

    $default  accept


State 19

    2 code: functions Main .

    $default  reduce using rule 2 (code)


State 20

    5 functions: functions function .

    $default  reduce using rule 5 (functions)


State 21

    4 Main: FUNCTION VOID MAIN . LEFTPAREN RIGHTPAREN void_block

    LEFTPAREN  shift, and go to state 25


State 22

  136 id: ID .

    $default  reduce using rule 136 (id)


State 23

    9 void_func: FUNCTION VOID id . LEFTPAREN args RIGHTPAREN void_block

    LEFTPAREN  shift, and go to state 26


State 24

   10 value_func: FUNCTION func_type id . LEFTPAREN args RIGHTPAREN value_block

    LEFTPAREN  shift, and go to state 27


State 25

    4 Main: FUNCTION VOID MAIN LEFTPAREN . RIGHTPAREN void_block

    RIGHTPAREN  shift, and go to state 28


State 26

    9 void_func: FUNCTION VOID id LEFTPAREN . args RIGHTPAREN void_block

    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    BOOL     shift, and go to state 32
    INTPTR   shift, and go to state 33
    CHARPTR  shift, and go to state 34
    REALPTR  shift, and go to state 35

    $default  reduce using rule 106 (args)

    var_type          go to state 36
    args              go to state 37
    args_decleration  go to state 38


State 27

   10 value_func: FUNCTION func_type id LEFTPAREN . args RIGHTPAREN value_block

    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    BOOL     shift, and go to state 32
    INTPTR   shift, and go to state 33
    CHARPTR  shift, and go to state 34
    REALPTR  shift, and go to state 35

    $default  reduce using rule 106 (args)

    var_type          go to state 36
    args              go to state 39
    args_decleration  go to state 38


State 28

    4 Main: FUNCTION VOID MAIN LEFTPAREN RIGHTPAREN . void_block

    LEFTBRACE  shift, and go to state 40

    void_block  go to state 41


State 29

   97 var_type: INT .

    $default  reduce using rule 97 (var_type)


State 30

   98 var_type: REAL .

    $default  reduce using rule 98 (var_type)


State 31

   99 var_type: CHAR .

    $default  reduce using rule 99 (var_type)


State 32

  100 var_type: BOOL .

    $default  reduce using rule 100 (var_type)


State 33

  101 var_type: INTPTR .

    $default  reduce using rule 101 (var_type)


State 34

  102 var_type: CHARPTR .

    $default  reduce using rule 102 (var_type)


State 35

  103 var_type: REALPTR .

    $default  reduce using rule 103 (var_type)


State 36

  117 args_decleration: var_type . params

    ID  shift, and go to state 22

    params  go to state 42
    id      go to state 43


State 37

    9 void_func: FUNCTION VOID id LEFTPAREN args . RIGHTPAREN void_block

    RIGHTPAREN  shift, and go to state 44


State 38

  104 args: args_decleration .
  105     | args_decleration . SEMICOLON args

    SEMICOLON  shift, and go to state 45

    $default  reduce using rule 104 (args)


State 39

   10 value_func: FUNCTION func_type id LEFTPAREN args . RIGHTPAREN value_block

    RIGHTPAREN  shift, and go to state 46


State 40

   11 void_block: LEFTBRACE . RIGHTBRACE
   12           | LEFTBRACE . declerations statments RIGHTBRACE
   13           | LEFTBRACE . statments RIGHTBRACE
   14           | LEFTBRACE . functions declerations statments RIGHTBRACE
   15           | LEFTBRACE . functions statments RIGHTBRACE
   16           | LEFTBRACE . functions RIGHTBRACE
   17           | LEFTBRACE . declerations RIGHTBRACE

    FUNCTION    shift, and go to state 47
    RETURN      shift, and go to state 48
    ID          shift, and go to state 22
    STRING      shift, and go to state 49
    VAR         shift, and go to state 50
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    DO          shift, and go to state 54
    LEFTBRACE   shift, and go to state 55
    RIGHTBRACE  shift, and go to state 56

    functions           go to state 57
    function            go to state 6
    void_func           go to state 7
    value_func          go to state 8
    statments           go to state 58
    statment            go to state 59
    if_statment         go to state 60
    if_else_statment    go to state 61
    loop_statment       go to state 62
    for                 go to state 63
    while               go to state 64
    do_while            go to state 65
    stat_assignment     go to state 66
    string_assignment   go to state 67
    func_call           go to state 68
    block               go to state 69
    declerations        go to state 70
    var_decleration     go to state 71
    string_decleration  go to state 72
    id                  go to state 73


State 41

    4 Main: FUNCTION VOID MAIN LEFTPAREN RIGHTPAREN void_block .

    $default  reduce using rule 4 (Main)


State 42

  117 args_decleration: var_type params .

    $default  reduce using rule 117 (args_decleration)


State 43

  125 params: id . COMMA params
  126       | id .

    COMMA  shift, and go to state 74

    $default  reduce using rule 126 (params)


State 44

    9 void_func: FUNCTION VOID id LEFTPAREN args RIGHTPAREN . void_block

    LEFTBRACE  shift, and go to state 40

    void_block  go to state 75


State 45

  105 args: args_decleration SEMICOLON . args

    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    BOOL     shift, and go to state 32
    INTPTR   shift, and go to state 33
    CHARPTR  shift, and go to state 34
    REALPTR  shift, and go to state 35

    $default  reduce using rule 106 (args)

    var_type          go to state 36
    args              go to state 76
    args_decleration  go to state 38


State 46

   10 value_func: FUNCTION func_type id LEFTPAREN args RIGHTPAREN . value_block

    LEFTBRACE  shift, and go to state 77

    value_block  go to state 78


State 47

    9 void_func: FUNCTION . VOID id LEFTPAREN args RIGHTPAREN void_block
   10 value_func: FUNCTION . func_type id LEFTPAREN args RIGHTPAREN value_block

    VOID     shift, and go to state 79
    INT      shift, and go to state 10
    REAL     shift, and go to state 11
    CHAR     shift, and go to state 12
    BOOL     shift, and go to state 13
    INTPTR   shift, and go to state 14
    CHARPTR  shift, and go to state 15
    REALPTR  shift, and go to state 16

    func_type  go to state 17


State 48

   34 statment: RETURN . expression SEMICOLON
   35         | RETURN . SEMICOLON

    ID         shift, and go to state 22
    INTEGER    shift, and go to state 80
    BOOLTRUE   shift, and go to state 81
    BOOLFALSE  shift, and go to state 82
    CSNULL     shift, and go to state 83
    REAL_D     shift, and go to state 84
    CHARACTER  shift, and go to state 85
    HEX        shift, and go to state 86
    STR        shift, and go to state 87
    NOT        shift, and go to state 88
    MULTI      shift, and go to state 89
    ADDRESS    shift, and go to state 90
    ABSUOLUTE  shift, and go to state 91
    SEMICOLON  shift, and go to state 92
    LEFTPAREN  shift, and go to state 93

    expression  go to state 94
    string_id   go to state 95
    csnull      go to state 96
    string      go to state 97
    char        go to state 98
    int         go to state 99
    real        go to state 100
    hex         go to state 101
    true        go to state 102
    false       go to state 103
    id          go to state 104
    ptr         go to state 105


State 49

  112 string_decleration: STRING . string_params SEMICOLON

    ID  shift, and go to state 22

    string_params  go to state 106
    id             go to state 107


State 50

  111 var_decleration: VAR . params_decleration SEMICOLON

    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    CHAR     shift, and go to state 31
    BOOL     shift, and go to state 32
    INTPTR   shift, and go to state 33
    CHARPTR  shift, and go to state 34
    REALPTR  shift, and go to state 35

    var_type            go to state 108
    params_decleration  go to state 109


State 51

   36 if_statment: IF . LEFTPAREN expression RIGHTPAREN statment
   37 if_else_statment: IF . LEFTPAREN expression RIGHTPAREN statment ELSE statment

    LEFTPAREN  shift, and go to state 110


State 52

   42 while: WHILE . LEFTPAREN expression RIGHTPAREN statment

    LEFTPAREN  shift, and go to state 111


State 53

   41 for: FOR . LEFTPAREN stat_assignment SEMICOLON expression SEMICOLON stat_assignment RIGHTPAREN statment

    LEFTPAREN  shift, and go to state 112


State 54

   43 do_while: DO . block WHILE LEFTPAREN expression RIGHTPAREN SEMICOLON

    LEFTBRACE  shift, and go to state 55

    block  go to state 113


State 55

   82 block: LEFTBRACE . RIGHTBRACE
   83      | LEFTBRACE . statments RIGHTBRACE
   84      | LEFTBRACE . declerations RIGHTBRACE
   85      | LEFTBRACE . declerations statments RIGHTBRACE
   86      | LEFTBRACE . RETURN expression SEMICOLON RIGHTBRACE
   87      | LEFTBRACE . statments RETURN expression SEMICOLON RIGHTBRACE
   88      | LEFTBRACE . declerations RETURN expression SEMICOLON RIGHTBRACE
   89      | LEFTBRACE . declerations statments RETURN expression SEMICOLON RIGHTBRACE

    RETURN      shift, and go to state 114
    ID          shift, and go to state 22
    STRING      shift, and go to state 49
    VAR         shift, and go to state 50
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    DO          shift, and go to state 54
    LEFTBRACE   shift, and go to state 55
    RIGHTBRACE  shift, and go to state 115

    statments           go to state 116
    statment            go to state 59
    if_statment         go to state 60
    if_else_statment    go to state 61
    loop_statment       go to state 62
    for                 go to state 63
    while               go to state 64
    do_while            go to state 65
    stat_assignment     go to state 66
    string_assignment   go to state 67
    func_call           go to state 68
    block               go to state 69
    declerations        go to state 117
    var_decleration     go to state 71
    string_decleration  go to state 72
    id                  go to state 73


State 56

   11 void_block: LEFTBRACE RIGHTBRACE .

    $default  reduce using rule 11 (void_block)


State 57

    5 functions: functions . function
   14 void_block: LEFTBRACE functions . declerations statments RIGHTBRACE
   15           | LEFTBRACE functions . statments RIGHTBRACE
   16           | LEFTBRACE functions . RIGHTBRACE

    FUNCTION    shift, and go to state 47
    RETURN      shift, and go to state 48
    ID          shift, and go to state 22
    STRING      shift, and go to state 49
    VAR         shift, and go to state 50
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    DO          shift, and go to state 54
    LEFTBRACE   shift, and go to state 55
    RIGHTBRACE  shift, and go to state 118

    function            go to state 20
    void_func           go to state 7
    value_func          go to state 8
    statments           go to state 119
    statment            go to state 59
    if_statment         go to state 60
    if_else_statment    go to state 61
    loop_statment       go to state 62
    for                 go to state 63
    while               go to state 64
    do_while            go to state 65
    stat_assignment     go to state 66
    string_assignment   go to state 67
    func_call           go to state 68
    block               go to state 69
    declerations        go to state 120
    var_decleration     go to state 71
    string_decleration  go to state 72
    id                  go to state 73


State 58

   13 void_block: LEFTBRACE statments . RIGHTBRACE
   25 statments: statments . statment

    RETURN      shift, and go to state 48
    ID          shift, and go to state 22
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    DO          shift, and go to state 54
    LEFTBRACE   shift, and go to state 55
    RIGHTBRACE  shift, and go to state 121

    statment           go to state 122
    if_statment        go to state 60
    if_else_statment   go to state 61
    loop_statment      go to state 62
    for                go to state 63
    while              go to state 64
    do_while           go to state 65
    stat_assignment    go to state 66
    string_assignment  go to state 67
    func_call          go to state 68
    block              go to state 69
    id                 go to state 73


State 59

   26 statments: statment .

    $default  reduce using rule 26 (statments)


State 60

   29 statment: if_statment .

    $default  reduce using rule 29 (statment)


State 61

   30 statment: if_else_statment .

    $default  reduce using rule 30 (statment)


State 62

   31 statment: loop_statment .

    $default  reduce using rule 31 (statment)


State 63

   38 loop_statment: for .

    $default  reduce using rule 38 (loop_statment)


State 64

   39 loop_statment: while .

    $default  reduce using rule 39 (loop_statment)


State 65

   40 loop_statment: do_while .

    $default  reduce using rule 40 (loop_statment)


State 66

   27 statment: stat_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 123


State 67

   28 statment: string_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 124


State 68

   33 statment: func_call . SEMICOLON

    SEMICOLON  shift, and go to state 125


State 69

   32 statment: block .

    $default  reduce using rule 32 (statment)


State 70

   12 void_block: LEFTBRACE declerations . statments RIGHTBRACE
   17           | LEFTBRACE declerations . RIGHTBRACE
  107 declerations: declerations . var_decleration
  109             | declerations . string_decleration

    RETURN      shift, and go to state 48
    ID          shift, and go to state 22
    STRING      shift, and go to state 49
    VAR         shift, and go to state 50
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    DO          shift, and go to state 54
    LEFTBRACE   shift, and go to state 55
    RIGHTBRACE  shift, and go to state 126

    statments           go to state 127
    statment            go to state 59
    if_statment         go to state 60
    if_else_statment    go to state 61
    loop_statment       go to state 62
    for                 go to state 63
    while               go to state 64
    do_while            go to state 65
    stat_assignment     go to state 66
    string_assignment   go to state 67
    func_call           go to state 68
    block               go to state 69
    var_decleration     go to state 128
    string_decleration  go to state 129
    id                  go to state 73


State 71

  108 declerations: var_decleration .

    $default  reduce using rule 108 (declerations)


State 72

  110 declerations: string_decleration .

    $default  reduce using rule 110 (declerations)


State 73

   44 stat_assignment: id . ASSIGNMENT expression
   45 string_assignment: id . LEFTBRACKET expression RIGHTBRACKET ASSIGNMENT expression
   74 func_call: id . LEFTPAREN func_params RIGHTPAREN
   75          | id . ASSIGNMENT id LEFTPAREN func_params RIGHTPAREN
   76          | id . LEFTPAREN RIGHTPAREN
   77          | id . ASSIGNMENT id LEFTPAREN RIGHTPAREN

    ASSIGNMENT   shift, and go to state 130
    LEFTPAREN    shift, and go to state 131
    LEFTBRACKET  shift, and go to state 132


State 74

  125 params: id COMMA . params

    ID  shift, and go to state 22

    params  go to state 133
    id      go to state 43


State 75

    9 void_func: FUNCTION VOID id LEFTPAREN args RIGHTPAREN void_block .

    $default  reduce using rule 9 (void_func)


State 76

  105 args: args_decleration SEMICOLON args .

    $default  reduce using rule 105 (args)


State 77

   18 value_block: LEFTBRACE . RETURN expression SEMICOLON RIGHTBRACE
   19            | LEFTBRACE . statments RETURN expression SEMICOLON RIGHTBRACE
   20            | LEFTBRACE . functions statments RETURN expression SEMICOLON RIGHTBRACE
   21            | LEFTBRACE . declerations statments RETURN expression SEMICOLON RIGHTBRACE
   22            | LEFTBRACE . functions declerations statments RETURN expression SEMICOLON RIGHTBRACE
   23            | LEFTBRACE . functions RETURN expression SEMICOLON RIGHTBRACE
   24            | LEFTBRACE . declerations RETURN expression SEMICOLON RIGHTBRACE

    FUNCTION   shift, and go to state 47
    RETURN     shift, and go to state 134
    ID         shift, and go to state 22
    STRING     shift, and go to state 49
    VAR        shift, and go to state 50
    IF         shift, and go to state 51
    WHILE      shift, and go to state 52
    FOR        shift, and go to state 53
    DO         shift, and go to state 54
    LEFTBRACE  shift, and go to state 55

    functions           go to state 135
    function            go to state 6
    void_func           go to state 7
    value_func          go to state 8
    statments           go to state 136
    statment            go to state 59
    if_statment         go to state 60
    if_else_statment    go to state 61
    loop_statment       go to state 62
    for                 go to state 63
    while               go to state 64
    do_while            go to state 65
    stat_assignment     go to state 66
    string_assignment   go to state 67
    func_call           go to state 68
    block               go to state 69
    declerations        go to state 137
    var_decleration     go to state 71
    string_decleration  go to state 72
    id                  go to state 73


State 78

   10 value_func: FUNCTION func_type id LEFTPAREN args RIGHTPAREN value_block .

    $default  reduce using rule 10 (value_func)


State 79

    9 void_func: FUNCTION VOID . id LEFTPAREN args RIGHTPAREN void_block

    ID  shift, and go to state 22

    id  go to state 23


State 80

  131 int: INTEGER .

    $default  reduce using rule 131 (int)


State 81

  134 true: BOOLTRUE .

    $default  reduce using rule 134 (true)


State 82

  135 false: BOOLFALSE .

    $default  reduce using rule 135 (false)


State 83

  128 csnull: CSNULL .

    $default  reduce using rule 128 (csnull)


State 84

  132 real: REAL_D .

    $default  reduce using rule 132 (real)


State 85

  130 char: CHARACTER .

    $default  reduce using rule 130 (char)


State 86

  133 hex: HEX .

    $default  reduce using rule 133 (hex)


State 87

  129 string: STR .

    $default  reduce using rule 129 (string)


State 88

   58 expression: NOT . expression

    ID         shift, and go to state 22
    INTEGER    shift, and go to state 80
    BOOLTRUE   shift, and go to state 81
    BOOLFALSE  shift, and go to state 82
    CSNULL     shift, and go to state 83
    REAL_D     shift, and go to state 84
    CHARACTER  shift, and go to state 85
    HEX        shift, and go to state 86
    STR        shift, and go to state 87
    NOT        shift, and go to state 88
    MULTI      shift, and go to state 89
    ADDRESS    shift, and go to state 90
    ABSUOLUTE  shift, and go to state 91
    LEFTPAREN  shift, and go to state 93

    expression  go to state 138
    string_id   go to state 95
    csnull      go to state 96
    string      go to state 97
    char        go to state 98
    int         go to state 99
    real        go to state 100
    hex         go to state 101
    true        go to state 102
    false       go to state 103
    id          go to state 104
    ptr         go to state 105


State 89

  137 ptr: MULTI . ID

    ID  shift, and go to state 139


State 90

   61 expression: ADDRESS . id
   62           | ADDRESS . string_id

    ID  shift, and go to state 22

    string_id  go to state 140
    id         go to state 141


State 91

   60 expression: ABSUOLUTE . id ABSUOLUTE

    ID  shift, and go to state 22

    id  go to state 142


State 92

   35 statment: RETURN SEMICOLON .

    $default  reduce using rule 35 (statment)


State 93

   59 expression: LEFTPAREN . expression RIGHTPAREN

    ID         shift, and go to state 22
    INTEGER    shift, and go to state 80
    BOOLTRUE   shift, and go to state 81
    BOOLFALSE  shift, and go to state 82
    CSNULL     shift, and go to state 83
    REAL_D     shift, and go to state 84
    CHARACTER  shift, and go to state 85
    HEX        shift, and go to state 86
    STR        shift, and go to state 87
    NOT        shift, and go to state 88
    MULTI      shift, and go to state 89
    ADDRESS    shift, and go to state 90
    ABSUOLUTE  shift, and go to state 91
    LEFTPAREN  shift, and go to state 93

    expression  go to state 143
    string_id   go to state 95
    csnull      go to state 96
    string      go to state 97
    char        go to state 98
    int         go to state 99
    real        go to state 100
    hex         go to state 101
    true        go to state 102
    false       go to state 103
    id          go to state 104
    ptr         go to state 105


State 94

   34 statment: RETURN expression . SEMICOLON
   46 expression: expression . PLUS expression
   47           | expression . MINUS expression
   48           | expression . MULTI expression
   49           | expression . DIVISION expression
   50           | expression . EQUAL expression
   51           | expression . GREATER expression
   52           | expression . GREATEREQUAL expression
   53           | expression . LESS expression
   54           | expression . LESSEQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . AND expression
   57           | expression . OR expression
